--- a/messotopia/package.json
+++ b/messotopia/package.json
@@ -8,6 +8,7 @@
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
+    "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
