--- a/messotopia/package.json
+++ b/messotopia/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Messtopia",
+  "name": "messtopia",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.1.1",
     "react-bootstrap": "^0.32.5",
-    "react-dom": "^16.1.12",
+    "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
