--- a/messotopia/package.json
+++ b/messotopia/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
   },
+  //React star here. Start
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
